--- a/.github/actions/create-pr-from-worktree/action.yml
+++ b/.github/actions/create-pr-from-worktree/action.yml
@@ -11,8 +11,8 @@ description: Create or update a Pull Request from worktree with labels and auto-
 author: atsushifx
 
 inputs:
-  base-branch:
-    description: "Base branch name (target branch for PR)"
+  pr-branch:
+    description: "PR branch name"
     required: true
   pr-title:
     description: "Pull request title"
@@ -49,23 +49,23 @@ outputs:
 runs:
   using: composite
   steps:
-    - name: Detect current branch
-      id: detect_branch
+    - name: Detect base branch
+      id: detect_base_branch
       shell: bash
       run: |
-        # Detect current branch name for PR creation
-        PR_BRANCH=$(git branch --show-current)
+        # Get current branch as base branch
+        BASE_BRANCH=$(git symbolic-ref --short HEAD)
 
-        if [ -z "$PR_BRANCH" ]; then
-          echo "::error::Failed to detect current branch name"
-          echo "::error::This action must be run in a git repository with a checked-out branch"
+        if [ -z "$BASE_BRANCH" ]; then
+          echo "::error::Failed to detect base branch (current branch)"
+          echo "::error::Ensure action is run on a checked-out branch (not detached HEAD)"
           echo "status=error" >> $GITHUB_OUTPUT
-          echo "message=Failed to detect current branch name" >> $GITHUB_OUTPUT
+          echo "message=Failed to detect current branch" >> $GITHUB_OUTPUT
           exit 1
         fi
 
-        echo "Detected PR branch: $PR_BRANCH"
-        echo "pr_branch=$PR_BRANCH" >> $GITHUB_OUTPUT
+        echo "Detected base branch (current): $BASE_BRANCH"
+        echo "base-branch=$BASE_BRANCH" >> $GITHUB_OUTPUT
         echo "status=ok" >> $GITHUB_OUTPUT
 
     - name: Validate environment
@@ -90,12 +90,12 @@ runs:
 
     - name: Validate branches
       id: validate_branches
-      if: steps.detect_branch.outputs.status == 'ok'
+      if: steps.detect_base_branch.outputs.status == 'ok'
       shell: bash
       run: |
         OUTPUT=$(bash ${{ github.action_path }}/scripts/validate-branches.sh \
-          "${{ inputs.base-branch }}" \
-          "${{ steps.detect_branch.outputs.pr_branch }}")
+          "${{ steps.detect_base_branch.outputs.base_branch }}" \
+          "${{ inputs.pr-branch }}")
         echo "$OUTPUT"
 
         # Extract EXIT_STATUS
@@ -109,19 +109,19 @@ runs:
     - name: Create or update Pull Request
       id: create_pr
       if: |
-        steps.detect_branch.outputs.status == 'ok' &&
+        steps.detect_base_branch.outputs.status == 'ok' &&
         steps.validate_environ.outputs.status == 'ok' &&
         steps.validate_branches.outputs.status == 'ok'
       shell: bash
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        BASE_BRANCH="${{ inputs.base-branch }}"
-        HEAD_BRANCH="${{ steps.detect_branch.outputs.pr_branch }}"
+        BASE_BRANCH="${{ steps.detect_base_branch.outputs.base-branch }}"
+        PR_BRANCH="${{ inputs.pr-branch }}"
 
         # Check if PR already exists from head branch to base branch
         # Timeout after 30 seconds
-        if ! EXISTING_PR=$(timeout 30s gh pr list --head "$HEAD_BRANCH" --base "$BASE_BRANCH" --json number --jq '.[0].number' 2>&1); then
+        if ! EXISTING_PR=$(timeout 30s gh pr list --head "$PR_BRANCH" --base "$BASE_BRANCH" --json number --jq '.[0].number' 2>&1); then
           EXIT_CODE=$?
           if [ $EXIT_CODE -eq 124 ]; then
             echo "::error::GitHub API call (gh pr list) timed out after 30 seconds"
@@ -192,7 +192,7 @@ runs:
     - name: Set PR labels
       id: set_labels
       if: |
-        steps.detect_branch.outputs.status == 'ok' &&
+        steps.detect_base_branch.outputs.status == 'ok' &&
         steps.validate_environ.outputs.status == 'ok' &&
         steps.validate_branches.outputs.status == 'ok'
       shell: bash
@@ -238,7 +238,7 @@ runs:
     - name: Enable auto-merge
       id: enable_automerge
       if: |
-        steps.detect_branch.outputs.status == 'ok' &&
+        steps.detect_base_branch.outputs.status == 'ok' &&
         steps.validate_environ.outputs.status == 'ok' &&
         steps.validate_branches.outputs.status == 'ok' &&
         inputs.merge-method != 'never'
