ci(scan-all): configure ghalint and relax PR trigger
- .github/workflows/ci-scan-all.yml
  - Add config-file option to ghalint job
  - Use ./configs/ghalint.yaml as the config path
  - Remove branch filters from pull_request trigger

--- a/.github/workflows/ci-scan-all.yml
+++ b/.github/workflows/ci-scan-all.yml
@@ -20,10 +20,6 @@ on:
       - releases
 
   pull_request:
-    branches:
-      - main
-      - master
-      - releases
 
   workflow_dispatch:
 
@@ -39,6 +35,8 @@ jobs:
     permissions:
       contents: read
     uses: aglabo/.github/.github/workflows/ci-common-lint-ghalint.yml@r1.1.1
+    with:
+      config-file: ./configs/ghalint.yaml
 
   scan-gitleaks:
     name: Gitleaks Secret Scan
