--- a/.github/workflows/ci-scan-all.yml
+++ b/.github/workflows/ci-scan-all.yml
@@ -39,6 +39,8 @@ jobs:
     permissions:
       contents: read
     uses: aglabo/.github/.github/workflows/ci-common-lint-ghalint.yml@r1.1.1
+    with:
+      config-file: ./configs/ghalint.yaml
 
   scan-gitleaks:
     name: Gitleaks Secret Scan
