fix(actions/create-pr): move branch checkout before timeout block
- .github/actions/create-pr-from-worktree/action.yml:
  git switch コマンドを timeout ブロックの外に移動
  git sw を git switch に変更して一貫性を確保

--- a/.github/actions/create-pr-from-worktree/action.yml
+++ b/.github/actions/create-pr-from-worktree/action.yml
@@ -118,10 +118,10 @@ runs:
       run: |
         BASE_BRANCH="${{ steps.detect.outputs.base-branch }}"
         PR_BRANCH="${{ inputs.pr-branch }}"
+        git switch "$PR_BRANCH"
 
         # Check if PR already exists from head branch to base branch
         # Timeout after 30 seconds
-        git sw "$PR_BRANCH"
         if ! EXISTING_PR=$(timeout 30s gh pr list --head "$PR_BRANCH" --base "$BASE_BRANCH" --json number --jq '.[0].number' 2>&1); then
           EXIT_CODE=$?
           if [ $EXIT_CODE -eq 124 ]; then
