feat(actions/create-pr): add git status output before PR check
- .github/actions/create-pr-from-worktree/action.yml:
  PR チェック前に git status コマンドの出力を追加
  デバッグ用に区切り線で囲んだ git status の実行を追加

--- a/.github/actions/create-pr-from-worktree/action.yml
+++ b/.github/actions/create-pr-from-worktree/action.yml
@@ -119,6 +119,10 @@ runs:
         BASE_BRANCH="${{ steps.detect.outputs.base-branch }}"
         PR_BRANCH="${{ inputs.pr-branch }}"
 
+        echo  "--- git status ---"
+        git status
+        echo  "--- git status ---"
+
         # Check if PR already exists from head branch to base branch
         # Timeout after 30 seconds
         if ! EXISTING_PR=$(timeout 30s gh pr list --head "$PR_BRANCH" --base "$BASE_BRANCH" --json number --jq '.[0].number' 2>&1); then
