ci(workflows/test-pr): add git status debug output in worktree
- .github/workflows/test-create-pr.yml:
  ワークツリー内での git push 後に git status の出力を追加
  デバッグ用の区切り線を含む 3 行を挿入

--- a/.github/workflows/test-create-pr.yml
+++ b/.github/workflows/test-create-pr.yml
@@ -111,6 +111,9 @@ jobs:
           git add test-create-pr.sh
           git commit -m "test: add test-create-pr.sh for create-pr-from-worktree action test"
           git push origin ${{ steps.vars.outputs.PR_BRANCH }}
+          echo "--- git status in worktree ---"
+          git status
+          echo "--- git status in worktree ---"
 
       - name: create pr using composite action
         uses: ./.github/actions/create-pr-from-worktree
