refactor(workflows/test-pr): change worktree directory to runner temp
- .github/workflows/test-create-pr.yml:
  worktree-dir の値を .worktree/work-temp から ${RUNNER_TEMP}/gitworktree/work-temp に変更

--- a/.github/workflows/test-create-pr.yml
+++ b/.github/workflows/test-create-pr.yml
@@ -53,7 +53,7 @@ jobs:
             echo "PR_BRANCH=${pr_branch}"
             echo "LABELS=test,automated,integration-test"
             echo "MERGE_METHOD=never"
-            echo "worktree-dir=.worktree/work-temp"
+            echo "worktree-dir=${RUNNER_TEMP}/gitworktree/work-temp"
           } >> "$GITHUB_OUTPUT"
 
           # PR body with timestamp to verify updates
