style(workflows/create-br): change backtick quotes to single quotes
- .github/workflows/test-create-pr.yml:
  PR body内の`create-pr-from-worktree`をbacktickから
  single quoteに変更

--- a/.github/workflows/test-create-pr.yml
+++ b/.github/workflows/test-create-pr.yml
@@ -61,7 +61,7 @@ jobs:
             echo "PR_BODY<<EOF"
             echo "## Integration Test PR"
             echo ""
-            echo "This PR is automatically created by the integration test workflow to verify the \`create-pr-from-worktree\` action."
+            echo "This PR is automatically created by the integration test workflow to verify the 'create-pr-from-worktree' action."
             echo ""
             echo "**Test Run Information:**"
             echo "- Workflow: ${{ github.workflow }}"
