fix(actions/create-pr): correct branch variable in PR creation
- .github/actions/create-pr-from-worktree/action.yml:
  BASE_BRANCH と HEAD_BRANCH の引用符をダブルクォートに変更
  HEAD_BRANCH を PR_BRANCH に修正して正しい変数を使用

--- a/.github/actions/create-pr-from-worktree/action.yml
+++ b/.github/actions/create-pr-from-worktree/action.yml
@@ -167,8 +167,8 @@ runs:
 
           # Create PR with timeout (60 seconds for creation)
           if ! PR_URL=$(timeout 60s gh pr create \
-            --base $BASE_BRANCH \
-            --head $HEAD_BRANCH \
+            --base "$BASE_BRANCH" \
+            --head "$PR_BRANCH" \
             --title "${{ inputs.pr-title }}" \
             --body "${{ inputs.pr-body }}" 2>&1); then
             EXIT_CODE=$?
