refactor(ci/create-pr): improve shell quote safety in PR body handling
- .github/actions/create-pr-from-worktree/action.yml:
  PR body の書き込みを echo から heredoc (cat <<'EOF') に変更 (行142-144, 163-165)
  JSON パースを echo パイプから here-string (<<<) に変更 (行210-211)

--- a/.github/actions/create-pr-from-worktree/action.yml
+++ b/.github/actions/create-pr-from-worktree/action.yml
@@ -139,7 +139,9 @@ runs:
         if [ -n "$EXISTING_PR" ]; then
           echo "PR #$EXISTING_PR already exists, updating title and body"
           mkdir -p ${RUNNER_TEMP}/temp
-          echo ${{ inputs.pr-body }} > ${RUNNER_TEMP}/temp/pr_body.txt
+          cat > ${RUNNER_TEMP}/temp/pr_body.txt <<'EOF'
+${{ inputs.pr-body }}
+EOF
 
           # Update PR title and body with timeout
           if ! timeout 30s gh pr edit "$EXISTING_PR" \
@@ -158,7 +160,9 @@ runs:
         else
           echo "Creating new Pull Request"
           mkdir -p ${RUNNER_TEMP}/temp
-          echo ${{ inputs.pr-body }} > ${RUNNER_TEMP}/temp/pr_body.txt
+          cat > ${RUNNER_TEMP}/temp/pr_body.txt <<'EOF'
+${{ inputs.pr-body }}
+EOF
           # Create PR with timeout (60 seconds for creation)
           if ! timeout 60s gh pr create \
             --base "$BASE_BRANCH" \
@@ -203,8 +207,8 @@ runs:
         fi
 
         # Extract number and URL from JSON
-        PR_NUMBER=$(echo "$PR_JSON" | jq -r '.number')
-        PR_URL=$(echo "$PR_JSON" | jq -r '.url')
+        PR_NUMBER=$(jq -r '.number' <<< "$PR_JSON")
+        PR_URL=$(jq -r '.url' <<< "$PR_JSON")
 
         # Validate extracted values
         if [ -z "$PR_NUMBER" ] || [ "$PR_NUMBER" = "null" ]; then
