ci(workflows/test-pr): change merge method to squash
- .github/workflows/test-create-pr.yml:
  MERGE_METHOD を never から squash に変更

--- a/.github/workflows/test-create-pr.yml
+++ b/.github/workflows/test-create-pr.yml
@@ -52,7 +52,7 @@ jobs:
             echo "BASE_BRANCH=${base_branch}"
             echo "PR_BRANCH=${pr_branch}"
             echo "LABELS=test,automated,integration-test"
-            echo "MERGE_METHOD=never"
+            echo "MERGE_METHOD=squash"
             echo "worktree-dir=${RUNNER_TEMP}/gitworktree/work-temp"
           } >> "$GITHUB_OUTPUT"
 
