--- a/.github/workflows/test-create-pr.yml
+++ b/.github/workflows/test-create-pr.yml
@@ -38,7 +38,7 @@ jobs:
         id: checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
-          fetch-depth: 0
+          fetch-depth: 5
           persist-credentials: true
 
       - name: Setup test variables
@@ -106,18 +106,16 @@ jobs:
           echo "echo 'This is a test file for create-pr-from-worktree action test.'" >> test-create-pr.sh
           git add test-create-pr.sh
           git commit -m "test: add test-create-pr.sh for create-pr-from-worktree action test"
-
-          echo "=== Commit Signature (commit) ==="
-          git log -1 --show-signature
-          echo ""
-          echo "=== End of Commit Signature Verification ==="
-
           git push origin ${{ steps.vars.outputs.PR_BRANCH }} --force
 
       - name: Verify signed commit
         run: |
           cd ${{ steps.vars.outputs.worktree-dir }}
+          git fetch --all --prune
           echo "=== Commit Signature (pushed) ==="
+          git rev-parse HEAD
+          git cat-file -t HEAD
+
           gitsign verify
           echo ""
           echo "=== End of Commit Signature Verification ==="
