refactor(actions/worktree-init): use PATH for gitsign executable
- .github/actions/pr-worktree-initialize/action.yml:
  gpg.x509.program の設定を ${RUNNER_TEMP}/bin/gitsign から gitsign に変更し、PATH 経由で実行可能ファイルを参照するように修正

--- a/.github/actions/pr-worktree-initialize/action.yml
+++ b/.github/actions/pr-worktree-initialize/action.yml
@@ -108,7 +108,7 @@ runs:
         # Configure git to use gitsign
         git config --local commit.gpgsign true
         git config --local gpg.format x509
-        git config --local gpg.x509.program ${RUNNER_TEMP}/bin/gitsign
+        git config --local gpg.x509.program gitsign
 
         echo "✓ Gitsign configured"
 
