test(ci/create-pr): add diagnostic checks before signature verification
- .github/workflows/test-create-pr.yml:
  署名検証前に git cat-file でコミットオブジェクトタイプを確認
  git rev-parse --is-shallow-repository で shallow clone 状態を診断
  既存の署名検証ログに診断セクションを追加

--- a/.github/workflows/test-create-pr.yml
+++ b/.github/workflows/test-create-pr.yml
@@ -112,8 +112,17 @@ jobs:
         run: |
           cd ${{ steps.vars.outputs.worktree-dir }}
           echo "=== Commit Signature (pushed) ==="
-          git log -1 --show-signature
+
+          echo "cat-file"
+          git cat-file -t HEAD
+
+          # shallow clone か？
+          echo "is-shallow-repository:"
+          git rev-parse --is-shallow-repository
           echo ""
+          # 署名付きか（gitsign/GPG 共通）
+          git log -1 --show-signature
+
           echo "=== End of Commit Signature Verification ==="
 
       - name: create pr using composite action
