fix(workflows/test-create-pr): correct test file path
- .github/workflows/test-create-pr.yml:
  106行目: test-create-pr.sh のパスを ./tests/test-create-pr.sh に修正
  111-124行目: "Verify signed commit" ステップを削除
  (git cat-file、shallow repository チェック、署名検証を含む)

--- a/.github/workflows/test-create-pr.yml
+++ b/.github/workflows/test-create-pr.yml
@@ -103,27 +103,10 @@ jobs:
         run: |
           cd ${{ steps.vars.outputs.worktree-dir }}
           echo "#!/bin/bash" > test-create-pr.sh
-          echo "echo 'This is a test file for create-pr-from-worktree action test.'" >> test-create-pr.sh
+          echo "echo 'This is a test file for create-pr-from-worktree action test.'" >> ./tests/test-create-pr.sh
           git add test-create-pr.sh
           git commit -m "test: add test-create-pr.sh for create-pr-from-worktree action test"
           git push origin ${{ steps.vars.outputs.PR_BRANCH }} --force
-
-      - name: Verify signed commit
-        run: |
-          cd ${{ steps.vars.outputs.worktree-dir }}
-          echo "=== Commit Signature (pushed) ==="
-
-          echo "cat-file"
-          git cat-file -t HEAD
-
-          # shallow clone か？
-          echo "is-shallow-repository:"
-          git rev-parse --is-shallow-repository
-          echo ""
-          # 署名付きか（gitsign/GPG 共通）
-          git log -1 --show-signature
-
-          echo "=== End of Commit Signature Verification ==="
 
       - name: create pr using composite action
         uses: ./.github/actions/create-pr-from-worktree
