ci(workflows/test-create-pr): use remote reference
- .github/workflows/test-create-pr.yml:
  action参照をローカルパスからリモートリポジトリ参照 (aglabo/create-pr-sandbox@v0.0.1) に変更
  step id を init_worktree から init-worktree に統一 (ハイフン区切りに修正)

--- a/.github/workflows/test-create-pr.yml
+++ b/.github/workflows/test-create-pr.yml
@@ -91,8 +91,8 @@ jobs:
           } >> "$GITHUB_OUTPUT"
 
       - name: Initialize worktree with gitsign
-        uses: ./.github/actions/pr-worktree-initialize
-        id: init_worktree
+        id: init-worktree
+        uses: aglabo/create-pr-sandbox/.github/actions/pr-worktree-initialize@v0.0.1
         with:
           branch-name: ${{ steps.vars.outputs.PR_BRANCH }}
           worktree-dir: ${{ steps.vars.outputs.worktree-dir }}
