--- a/configs/ghalint.yaml
+++ b/configs/ghalint.yaml
@@ -23,8 +23,15 @@ excludes:
     job_name: scan-gitleaks
     action_name: aglabo/.github/.github/workflows/ci-common-scan-gitleaks.yml
 
+  # allow test-create-pr.
+  #
+  - policy_name: action_ref_should_be_full_length_commit_sha
+    workflow_file_path: .github/workflows/test-create-pr.yml
+    job_name: test-action
+    step_id: init-worktree
+    action_name: aglabo/create-pr-sandbox/.github/actions/pr-worktree-initialize
 
-  # for create-pr
+  # Allow persist-credentials: true for git push operations
   - policy_name: checkout_persist_credentials_should_be_false
     workflow_file_path: .github/workflows/test-create-pr.yml
     job_name: test-action
