--- a/.github/actions/pr-worktree-setup/action.yml
+++ b/.github/actions/pr-worktree-setup/action.yml
@@ -50,52 +50,14 @@ runs:
       env:
         VERSION: ${{ inputs.gitsign-version }}
       run: |
-        OUTPUT=$(bash ${{ github.action_path }}/scripts/install-gitsign.sh ${{inputs.gitsign-version }} 2>&1)
-        echo "$OUTPUT"
-
-        # Extract status and path from script output
-        STATUS_LINE=$(echo "$OUTPUT" | grep "^EXIT_STATUS=" | head -1)
-        PATH_LINE=$(echo "$OUTPUT" | grep "^GITSIGN_PATH=" | head -1)
-
-        # Parse status
-        STATUS=$(echo "$STATUS_LINE" | cut -d= -f2 | cut -d: -f1)
-        MESSAGE=$(echo "$STATUS_LINE" | cut -d= -f2 | cut -d: -f2-)
-
-        # Parse gitsign path
-        GITSIGN_PATH=$(echo "$PATH_LINE" | cut -d= -f2)
-
-        # Set outputs
-        echo "status=$STATUS" >> $GITHUB_OUTPUT
-        echo "message=$MESSAGE" >> $GITHUB_OUTPUT
-        echo "gitsign_path=$GITSIGN_PATH" >> $GITHUB_OUTPUT
-
-        # Log error if installation failed (but don't exit 1)
-        if [ "$STATUS" = "error" ]; then
-          echo "::error::Gitsign installation failed: $MESSAGE"
-        fi
+        bash ${{ github.action_path }}/scripts/install-gitsign.sh ${{inputs.gitsign-version }}
 
     - name: Validate gitsign installation
-      id: validate_gitsign
+      id: validate-gitsign
+      if: steps.install-gitsign.outcome == 'success'
       shell: bash
       run: |
-        OUTPUT=$(bash ${{ github.action_path }}/scripts/validate-gitsign.sh)
-        echo "$OUTPUT"
-
-        # Extract EXIT_STATUS line
-        STATUS_LINE=$(echo "$OUTPUT" | grep "^EXIT_STATUS=" | head -1)
-
-        # Extract status (ok|error|warning)
-        STATUS=$(echo "$STATUS_LINE" | cut -d= -f2 | cut -d: -f1)
-        echo "status=$STATUS" >> $GITHUB_OUTPUT
-
-        # Extract message
-        MESSAGE=$(echo "$STATUS_LINE" | cut -d= -f2 | cut -d: -f2-)
-        echo "message=$MESSAGE" >> $GITHUB_OUTPUT
-
-        # Log error if validation failed (but don't exit 1)
-        if [ "$STATUS" = "error" ]; then
-          echo "::error::Gitsign validation failed: $MESSAGE"
-        fi
+        bash ${{ github.action_path }}/scripts/validate-gitsign.sh "${{ steps.install-gitsign.outputs.gitsign-path }}"
 
     - name: Validate worktree directory
       id: validate_directory
@@ -111,28 +73,30 @@ runs:
           echo "::error::Please remove the directory first or choose a different path"
           echo "status=error" >> $GITHUB_OUTPUT
           echo "message=Directory already exists: ${WORKTREE_DIR}" >> $GITHUB_OUTPUT
-          exit 0
+          exit 1
         fi
 
-        # Try to create directory (validates parent directory exists and is writable)
-        if ! mkdir -p "${WORKTREE_DIR}"; then
-          echo "::error::Failed to create directory: ${WORKTREE_DIR}"
-          echo "::error::Check parent directory permissions or path validity"
-          echo "status=error" >> $GITHUB_OUTPUT
-          echo "message=Failed to create directory: ${WORKTREE_DIR}" >> $GITHUB_OUTPUT
-          exit 0
+        # Validate parent directory exists and is writable
+        PARENT_DIR=$(dirname "${WORKTREE_DIR}")
+        if [ ! -d "${PARENT_DIR}" ]; then
+          echo "::error::Parent directory does not exist: ${PARENT_DIR}"
+          echo "::error::Cannot create worktree - parent directory must exist first"
+          exit 1
         fi
 
-        # Remove the directory (git worktree add will create it)
-        rmdir "${WORKTREE_DIR}"
+        if [ ! -w "${PARENT_DIR}" ]; then
+          echo "::error::Parent directory is not writable: ${PARENT_DIR}"
+          echo "::error::Cannot create worktree - insufficient permissions"
+          exit 1
+        fi
 
-        echo "status=ok" >> $GITHUB_OUTPUT
-        echo "message=Directory validation passed" >> $GITHUB_OUTPUT
         echo "✓ Worktree directory validation passed"
+        echo "  Target: ${WORKTREE_DIR}"
+        echo "  Parent: ${PARENT_DIR} (exists and writable)"
 
     - name: Create worktree
       id: create_worktree
-      if: steps.validate_gitsign.outputs.status != 'error' && steps.validate_directory.outputs.status == 'ok'
+      if: steps.validate_gitsign.outputs.status != 'error' && steps.validate_directory.outputs.status == 'success'
       shell: bash
       run: |
         WORKTREE_DIR="${{ inputs.worktree-dir }}"
@@ -141,22 +105,29 @@ runs:
         echo "Creating worktree at: ${WORKTREE_DIR}"
         echo "Branch: ${BRANCH_NAME}"
 
-        # Check if branch already exists
+        # Check if branch already exists locally
         if git show-ref --verify --quiet "refs/heads/${BRANCH_NAME}"; then
-          echo "::error::Branch already exists: ${BRANCH_NAME}"
-          echo "::error::Cannot create worktree with -B flag as it would force-reset the existing branch"
+          echo "::error::Local branch already exists: ${BRANCH_NAME}"
           echo "::error::Please use a different branch name or delete the existing branch first"
-          echo "status=failed" >> $GITHUB_OUTPUT
-          echo "message=Branch already exists: ${BRANCH_NAME}" >> $GITHUB_OUTPUT
-          exit 0
+          exit 1
         fi
 
-        # Create worktree with branch
-        if ! git worktree add -B "${BRANCH_NAME}" "${WORKTREE_DIR}"; then
+        # Check if branch already exists on remote (critical for shallow clones)
+        if git ls-remote --exit-code --heads origin "${BRANCH_NAME}" >/dev/null 2>&1; then
+          echo "::error::Remote branch already exists: ${BRANCH_NAME}"
+          echo "::error::This will cause conflicts in git worktree add"
+          echo "::error::Please use a different branch name or delete the remote branch first"
+          exit 1
+        fi
+
+        echo "✓ Branch name is available (checked both local and remote)"
+
+        # Create worktree with new branch
+        if ! git worktree add "${WORKTREE_DIR}" -b "${BRANCH_NAME}"; then
           echo "::error::Failed to create worktree"
-          echo "status=failed" >> $GITHUB_OUTPUT
+          echo "status=error" >> $GITHUB_OUTPUT
           echo "message=Failed to create worktree at ${WORKTREE_DIR}" >> $GITHUB_OUTPUT
-          exit 0
+          exit 1
         fi
 
         # Get absolute path
@@ -206,37 +177,55 @@ runs:
 
     - name: Set final status
       id: set_final_status
+      if: always()
       shell: bash
       run: |
-        # Collect status from all validation steps
-        GITSIGN_STATUS="${{ steps.validate_gitsign.outputs.status }}"
-        GITSIGN_MESSAGE="${{ steps.validate_gitsign.outputs.message }}"
-        DIRECTORY_STATUS="${{ steps.validate_directory.outputs.status }}"
-        DIRECTORY_MESSAGE="${{ steps.validate_directory.outputs.message }}"
-        WORKTREE_STATUS="${{ steps.create_worktree.outputs.status }}"
-        WORKTREE_MESSAGE="${{ steps.create_worktree.outputs.message }}"
+        # Collect step outcomes
+        INSTALL_OUTCOME="${{ steps.install-gitsign.outcome }}"
+        VALIDATE_GITSIGN_OUTCOME="${{ steps.validate-gitsign.outcome }}"
+        VALIDATE_DIRECTORY_OUTCOME="${{ steps.validate-directory.outcome }}"
+        CREATE_WORKTREE_OUTCOME="${{ steps.create-worktree.outcome }}"
+        CONFIGURE_GITSIGN_OUTCOME="${{ steps.configure-gitsign.outcome }}"
+        CONFIGURE_USER_OUTCOME="${{ steps.configure-user.outcome }}"
 
-        # Default to success if all steps completed
+        # Default to success
         FINAL_STATUS="success"
-        FINAL_MESSAGE="Worktree setup completed successfully"
+        FINAL_MESSAGE="Worktree setup completed successfully with gitsign configuration"
 
-        # Check for failures (priority: error > failed > warning > success)
-        if [ "$GITSIGN_STATUS" = "error" ]; then
-          FINAL_STATUS="failed"
-          FINAL_MESSAGE="Setup failed: $GITSIGN_MESSAGE"
-        elif [ "$DIRECTORY_STATUS" = "error" ]; then
-          FINAL_STATUS="failed"
-          FINAL_MESSAGE="Setup failed: $DIRECTORY_MESSAGE"
-        elif [ -z "$WORKTREE_STATUS" ]; then
-          # Worktree creation was skipped (due to validation errors)
+        # Check for failures (priority: error > skipped > warning > success)
+        if [ "$INSTALL_OUTCOME" = "failure" ]; then
+          FINAL_STATUS="error"
+          FINAL_MESSAGE="Gitsign installation failed"
+        elif [ "$VALIDATE_OUTCOME" = "failure" ]; then
+          FINAL_STATUS="error"
+          FINAL_MESSAGE="Gitsign validation failed (includes output contract check)"
+        elif [ "$VALIDATE_GITSIGN_OUTCOME" = "skipped" ]; then
+          FINAL_STATUS="skipped"
+          FINAL_MESSAGE="Gitsign validation skipped due to installation failure"
+        elif [ "$VALIDATE_DIRECTORY_OUTCOME" = "failure" ]; then
+          FINAL_STATUS="error"
+          FINAL_MESSAGE="Worktree directory validation failed"
+        elif [ "$VALIDATE_DIRECTORY_OUTCOME" = "skipped" ]; then
+          FINAL_STATUS="skipped"
+          FINAL_MESSAGE="Worktree directory validation skipped due to previous failures"
+        elif [ "$CREATE_WORKTREE_OUTCOME" = "failure" ]; then
+          FINAL_STATUS="error"
+          FINAL_MESSAGE="Worktree creation failed"
+        elif [ "$WORKTREE_OUTCOME" = "skipped" ]; then
           FINAL_STATUS="skipped"
           FINAL_MESSAGE="Worktree creation skipped due to validation errors"
-        elif [ "$WORKTREE_STATUS" = "failed" ]; then
-          FINAL_STATUS="failed"
-          FINAL_MESSAGE="$WORKTREE_MESSAGE"
-        elif [ "$GITSIGN_STATUS" = "warning" ]; then
-          FINAL_STATUS="warning"
-          FINAL_MESSAGE="Worktree setup completed with warnings: $GITSIGN_MESSAGE"
+        elif [ "$CONFIGURE_GITSIGN_OUTCOME" = "failure" ]; then
+          FINAL_STATUS="error"
+          FINAL_MESSAGE="Gitsign configuration in worktree failed"
+        elif [ "$CONFIGURE_GITSIGN_OUTCOME" = "skipped" ]; then
+          FINAL_STATUS="skipped"
+          FINAL_MESSAGE="Gitsign configuration skipped due to previous failures"
+        elif [ "$CONFIGURE_USER_OUTCOME" = "failure" ]; then
+          FINAL_STATUS="error"
+          FINAL_MESSAGE="Git user configuration failed"
+        elif [ "$CONFIGURE_USER_OUTCOME" = "skipped" ]; then
+          FINAL_STATUS="skipped"
+          FINAL_MESSAGE="Git user configuration skipped due to previous failures"
         fi
 
         # Set outputs
@@ -244,13 +233,17 @@ runs:
         echo "message=$FINAL_MESSAGE" >> $GITHUB_OUTPUT
 
     - name: Output validation results
+      if: |
+        steps.install-gitsign.outcome == 'success' &&
+        steps.create-worktree.outcome == 'success' &&
+        steps.configure-gitsign.outcome == 'success'
       shell: bash
       run: |
         echo ""
         echo "=== Worktree Initialization Complete ==="
         echo "Worktree Path: ${{ steps.create_worktree.outputs.worktree_path }}"
         echo "Branch: ${{ inputs.branch-name }}"
-        echo "Gitsign Version: $( gitsign --version | head -1)"
+        echo "Gitsign Version: $( "${{ steps.install_gitsign.outputs.gitsign_path }}" --version | head -1)"
         echo "Setup Status: ${{ steps.set_final_status.outputs.status }}"
         echo "Message: ${{ steps.set_final_status.outputs.message }}"
         echo ""
