docs(create-pri/ERADME): restructure README
- .github/actions/create-pr-from-worktree/README.md
  - Reorganized documentation with a worktree-first approach
  - Documented required workflow setup, permissions, and runner constraints
  - Explained validation architecture and execution flow
  - Clarified base branch detection, label behavior, and auto-merge semantics
  - Documented Linux-only requirement and fail-open design decisions
  - Reduced overall length to improve readability

- .github/actions/create-pr-from-worktree/action.yml
  - Updated pr-operation output description to include update-failed

- .github/actions/create-pr-from-worktree/scripts/validate-ratelimit.sh
  - Documented reset time handling and rate limit decision rules

--- a/.github/actions/create-pr-from-worktree/action.yml
+++ b/.github/actions/create-pr-from-worktree/action.yml
@@ -43,7 +43,7 @@ outputs:
     description: "Pull request URL (empty if validation failed)"
     value: ${{ steps.create-pr.outputs.pr-url }}
   pr-operation:
-    description: "Operation performed (created, updated, or empty if validation failed)"
+    description: "Operation performed (created, updated, update-failed, or empty if validation failed)"
     value: ${{ steps.create-pr.outputs.operation }}
   automerge-status:
     description: "Auto-merge status (enabled, failed, timeout, or skipped if merge-method=never)"
